@@ -36,6 +36,10 @@ install(DIRECTORY ${FLTK_SOURCE_DIR}/FL
    PATTERN ".svn" EXCLUDE
 )
 
+install(DIRECTORY ${FLTK_BINARY_DIR}/FL
+   DESTINATION ${FLTK_INCLUDEDIR} USE_SOURCE_PERMISSIONS
+)
+
 if(OPTION_CREATE_LINKS)
    install(SCRIPT ${FLTK_BINARY_DIR}/install-symlinks.cmake)
 endif(OPTION_CREATE_LINKS)
