@@ -1,0 +1,31 @@
+/*
+  DO NOT EDIT - This file must be configured BEFORE building FLTK !
+*/
+
+/*
+  ============================================================================
+  Important note to IDE users:
+  ============================================================================
+
+  This file *may* be edited *before* building FLTK with your IDE project,
+  i.e. in /path/to/fltk/ide/<your-ide>/FL/abi-version.h:
+
+    (1) Define FL_ABI_VERSION as described below.
+    (2) Rebuild the entire FLTK library.
+    (3) Optional: install files as usual including THIS file.
+
+  DO NOT edit this file after building the FLTK library, i.e. when this
+  file is already installed in a (system) directory used to build your
+  programs.
+
+  Editing this file w/o rebuilding the entire FLTK library will change
+  the ABI and thus render your programs unusable - they may crash or
+  show other unpredictable errors. You have been warned!
+
+  ============================================================================
+  End of important note to IDE users.
+  ============================================================================
+
+/* define FL_ABI_VERSION as 10x0y for FLTK ABI version 1.x.y */
+
+#define FL_ABI_VERSION 10300
